auo schedule and fix event end date
